[package]
name = "advent-day-7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-common-lib = { path = "../../lib/rust-aoc-common-lib" }
pest = "2.5.1"
pest_derive = "2.5.1"
r3bl_rs_utils = "0.9.3"
